include(../cmake/LinkDependencies.cmake)
include(../cmake/SetIDEWorkingDirectory.cmake)

# Lists of all executables
add_subdirectory(example0)
add_subdirectory(example1)
add_subdirectory(example2)
add_subdirectory(example2a)
add_subdirectory(example3)
add_subdirectory(example4)
add_subdirectory(example5)
add_subdirectory(example6)
add_subdirectory(example7)
add_subdirectory(example8)
add_subdirectory(example9)
add_subdirectory(example_t1)
add_subdirectory(example_t2)
add_subdirectory(example_t3)
add_subdirectory(example_t4)